2007-01-18  Sascha L. Teichmann <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/LayoutFrame.java:
		query our interactors before other if they want to start.

	* src/de/intevation/printlayout/tools/PickingInteractor.java:
		enhance selection. unmodified clicks select only one object.
		click + <crtl> elongates current selection with object under
		Mouse. click + <shift> removes object under mouse from selection.

2007-01-18  Sascha L. Teichmann <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/LayoutFrame.java:
		- reordered menus once again. "File", "Edit", "Insert"
		- added Close entry to File menu
	
2007-01-18  Sascha L. Teichmann <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/LayoutFrame.java:
		default color/stroke/fill for box drawing is now 
		black/continues/unfilled.

	* src/de/intevation/printlayout/tools/BoxFactory.java:
		set "fill" property to "none" if no fill is given.
		set "pointer-events" to "all" to make it selectable
		even in unfilled state.

2007-01-18  Sascha L. Teichmann <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/LayoutFrame.java:
		title of the plugin frame is now "Print/Layout"

	* src/de/intevation/printlayout/PrintLayoutPlugin.java:
		the plugin is now activated over OJ's "File" menu
		in german called "Datei" over entry "Print/Layout"

2007-01-18  Sascha L. Teichmann <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/tools/Arrows.java:
		added. vector shapes for arrows needed in translation tool.

2007-01-17  Sascha L. Teichmann <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/LayoutFrame.java:
		rename tool buttons

	* src/de/intevation/printlayout/tools/PickingInteractor.java:
		add overlay to select tool

2007-01-17  Sascha L. Teichmann <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/tools/Tool.java:
		added. interface to be implemented by all tools
